--- a/src/main/resources/stages/MainStage.fxml
+++ b/src/main/resources/stages/MainStage.fxml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane prefHeight="250.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin.AdminApp">
+<AnchorPane prefHeight="250.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin.AdminApp">
    <children>
       <VBox prefHeight="250.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button fx:id="btnBans" mnemonicParsing="false" prefWidth="9.99999999E8" text="Баны" />
+            <Button fx:id="btnBans" mnemonicParsing="false" prefWidth="9.99999999E8" text="Баны">
+               <font>
+                  <Font name="Calibri" size="17.0" />
+               </font></Button>
          </children>
          <opaqueInsets>
             <Insets />
